adding rest controllers for data objects continued